--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   extended_image: ^6.0.3
   flutter_spinkit: ^5.1.0
   circular_profile_avatar: ^2.0.5
+  string_validator: ^0.3.0
 
 dev_dependencies:
   flutter_test:
