--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,17 @@ dependencies:
   flutter_spinkit: ^5.1.0
   circular_profile_avatar: ^2.0.5
   string_validator: ^0.3.0
+  flutterfire_ui: ^0.4.1
+  freezed: ^2.0.3+1
+  geoflutterfire: ^3.0.2
+  firebase_core: ^1.17.1
+  freezed_annotation: ^2.0.3
+  google_maps_flutter: ^2.1.7
+  font_awesome_flutter: ^9.2.0
+  carousel_slider: ^4.1.1
+  loading_animation_widget: ^1.2.0+2
+  flutter_launcher_icons: ^0.10.0
+  flutter_native_splash: ^2.2.7
 
 dev_dependencies:
   flutter_test:
@@ -60,10 +71,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   build_runner: ^2.1.10
   json_serializable: ^6.2.0
-  freezed: ^2.0.2
+  cloud_firestore_odm_generator: ^1.0.0-dev.17
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
