--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+2
   flutter_launcher_icons: ^0.10.0
   flutter_native_splash: ^2.2.7
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ dev_dependencies:
   build_runner: ^2.1.10
   json_serializable: ^6.2.0
   cloud_firestore_odm_generator: ^1.0.0-dev.17
+  flutter_automation: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
