--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+1
+version: 1.1.0+1
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -84,6 +84,7 @@ dependencies:
   image_picker_platform_interface: 2.6.2
   intl: 0.18.0
   json_path: 0.6.2
+  mask_text_input_formatter: 2.4.0
   mime_type: 1.0.0
   package_info_plus: 3.1.0
   package_info_plus_platform_interface: 2.0.1
@@ -92,7 +93,6 @@ dependencies:
   path_provider_android: 2.0.25
   path_provider_foundation: 2.2.2
   path_provider_platform_interface: 2.0.6
-  percent_indicator: 4.2.2
   photo_view: 0.14.0
   plugin_platform_interface: 2.1.3
   provider: 6.0.4
